# galpha-proto

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  package.json  tsconfig.json
proto/ledger/v1/: http.proto
proto/position_manager/v1/: rpc.proto
proto/user_service/v1/: http.proto
scripts/: generate-index.js
src/: lib.rs
ts/tests/: package-test.js  package-test.ts
