[package]
name = "galpha-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Protobuf support
prost = "0.13"
prost-types = "0.13"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbjson = "0.7"
pbjson-types = "0.7"

[build-dependencies]
prost-build = "0.13"
pbjson-build = "0.7"
